k8s/kpen/kpen-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kpen-service
spec:
  selector:
    app: kpen-pod
  ports:
    - name: http
      port: 80
      targetPort: 3010
